# textedit

./: AGENTS.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  release.yml
assets/: sw.js
src/: app.rs  config.rs  error.rs  file.rs  lib.rs  main.rs  menu.rs  state.rs  syntax.rs
src/app/: clipboard.rs  event.rs  helpers.rs  mod.rs  state.rs
src/application/: editor_service.rs  file_service.rs  mod.rs
src/domain/: buffer.rs  cursor.rs  mod.rs  operations.rs  position.rs
src/editor/: buffer.rs  command_bar.rs  cursor.rs  document.rs  keyboard.rs  mod.rs  operations.rs  panel.rs
src/features/: find.rs  mod.rs  settings.rs  theme.rs  undo.rs
src/infrastructure/: clipboard.rs  file_system.rs  mod.rs
src/interface/: app.rs  keyboard.rs  mod.rs
src/menu/: actions.rs  handler.rs  helpers.rs  mod.rs  platform.rs
src/platform/: mod.rs
src/ports/: clipboard_port.rs  file_port.rs  mod.rs  render_port.rs  window_port.rs
src/renderer/: cursor.rs  cursor.wgsl  glyph_cache.rs  layout.rs  line_numbers.rs  mod.rs  primitive_builders.rs  primitive_renderer.rs  scrollbar.rs  status_bar.rs  text.rs  text.wgsl  text_geometry.rs  ui_background.rs
src/state/: font.rs  geometry.rs  init.rs  mod.rs  render.rs  scroll.rs
src/themes/: dark.rs  dracula.rs  gruvbox_dark.rs  light.rs  mod.rs  one_dark.rs  solarized_dark.rs
src/ui/: components.rs  event_router.rs  layers.rs  layout.rs  menu.rs  mod.rs  primitives.rs  statusbar.rs  tabs.rs  widget.rs
tests/application/: editor_service_test.rs  mod.rs
tests/domain/: buffer_test.rs  cursor_test.rs  mod.rs  (+1 more)
(+17 files in other folders)
