[package]
name = "textedit"
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
# Window & Events
winit = { version = "0.30", features = ["android-native-activity"] }

# Graphics
wgpu = { version = "0.20", features = ["webgpu"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Text & Unicode
ropey = "1.6"
unicode-segmentation = "1.10"

# Font Rasterization
fontdue = "0.7"

# Clipboard
arboard = "3.3"

# Filesystem & Serialization
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
once_cell = "1.19"

# Menu bar
muda = "0.17"

# File dialogs
rfd = "0.15"
syntect = "5.3.0"

[dev-dependencies]
tempfile = "3.8"
